# Link16_JTIDS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  check_all_files.ps1  check_all_utf8.bat  check_bom.ps1  check_utf8.bat  config.ini  convert_all_files.bat  convert_to_utf8.ps1  convert_to_utf8_improved.ps1  utf8_verification_results.txt  verify_utf8.ps1  verify_utf8_improved.ps1
Link16/: AES.cpp  ContinueWord.cpp  ContinueWord.h  ExtendWord.cpp  ExtendWord.h  HeaderWord.cpp  HeaderWord.h  InitialWord.cpp  InitialWord.h  STDPMsg.cpp  STDPMsg.h  Word.cpp  Word.hpp  dataType.h  decodeTools.cpp  global.cpp  global.h  interface.cpp  interface.h  resource.h  schifra_crc.hpp  schifra_ecc_traits.hpp  schifra_error_processes.hpp  schifra_galois_field.hpp  schifra_galois_field_element.hpp  schifra_galois_field_polynomial.hpp  schifra_reed_solomon_bitio.hpp  schifra_reed_solomon_decoder.hpp  schifra_reed_solomon_encoder.hpp  tools.cpp  tools.h
docs/: Doxyfile.in
include/link16/: Link16.h
include/link16/api/: CodingAPI.h  MessageAPI.h  PhysicalAPI.h  SimulationAPI.h
include/link16/simulation/: ChannelSimulation.h  EndToEndSimulation.h
lib/schifra/: schifra_fileio.hpp  schifra_reed_solomon_block.hpp  schifra_sequential_root_generator_polynomial_creator.hpp
src/api/: CodingAPI.cpp  Link16.cpp  MessageAPI.cpp  PhysicalAPI.cpp  SimulationAPI.cpp  TransmitFlow.h
src/application/: Link16System.cpp  Link16System.h  README.md  main.cpp
src/application/real/: Link16App.cpp  Link16App.h
src/application/simulation/: SimulationApp.cpp  SimulationApp.h
src/coding/: CodingProcessor.cpp  CodingProcessor.h
src/coding/crypto/symmetric/aes/: AES.h  AESCrypto.cpp  AESCrypto.h
src/coding/error_correction/reed_solomon/: RSCoder.cpp  RSCoder.h  RSCoderTest.cpp
src/coding/error_detection/crc/: CRCCoder.cpp  CRCCoder.h
src/coding/error_detection/parity/: BIPCoder.cpp  BIPCoder.h
src/coding/interleaving/matrix/: MatrixInterleaver.cpp  MatrixInterleaver.h  MatrixInterleaverTest.cpp
src/core/config/: SystemConfig.cpp  SystemConfig.h  global.cpp  global.h
src/core/types/: Link16Types.h  dataType.h
src/core/utils/: fileUtils.cpp  fileUtils.h  logger.cpp  logger.h  platform.h  tools.cpp  tools.h
src/physical/: PhysicalProcessor.h
src/physical/frequency/hopping/: FrequencyHopping.cpp  FrequencyHopping.h
src/physical/frequency/management/: FrequencyManager.cpp  FrequencyManager.h
src/physical/frequency_hopping/: FrequencyHopping.h
src/physical/hardware/usrp/: USRPDevice.cpp  USRPDevice.h  USRPInterface.cpp  USRPInterface.h  USRPReceiver.cpp  USRPReceiver.h  USRPTransmitter.cpp  USRPTransmitter.h
src/physical/modulation/digital/PSK/: BPSKModulator.cpp  BPSKModulator.h  DPSKModulator.h  QPSKModulator.cpp  QPSKModulator.h
src/physical/signal_processing/filter/: FIRFilter.cpp  FIRFilter.h
src/physical/signal_processing/resampling/: Resampler.cpp  Resampler.h
src/physical/synchronization/: Synchronizer.h
src/physical/synchronization/frame/: FrameSynchronizer.cpp  FrameSynchronizer.h
src/physical/synchronization/time/: TimeSynchronizer.cpp  TimeSynchronizer.h
src/protocol/: MessageProcessor.h
src/protocol/formats/: J_Series.cpp  J_Series.h
src/protocol/interface/: decodeTools.h  handler.cpp  interface.cpp  interface.h
src/protocol/message/: STDPMsg.cpp  STDPMsg.h
src/protocol/message/word/: ContinueWord.cpp  ContinueWord.h  ExtendWord.cpp  ExtendWord.h  HeaderWord.cpp  HeaderWord.h  InitialWord.cpp  InitialWord.h  Word.hpp
src/simulation/: EndToEndSimulation.cpp  EndToEndSimulation.h
src/simulation/channel/awgn/: AWGNChannel.cpp  AWGNChannel.h
src/simulation/channel/base/: ChannelModel.cpp  ChannelModel.h
src/simulation/channel/fading/: RayleighChannel.cpp  RayleighChannel.h
src/simulation/engine/: SimulationConfig.cpp  SimulationConfig.h  SimulationEngine.cpp  SimulationEngine.h
src/simulation/metrics/: BER.cpp  BER.h  Throughput.cpp  Throughput.h
tests/: CMakeLists.txt  test_main.cpp
tests/coding/error_detection/parity/: BIPCoderTest.cpp
